--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ authors = ["Yeojin <bluemeta@gmail.com>"]
 [tool.poetry.dependencies]
 python = "^3.9"
 Django = "^3.2.5"
+uWSGI = "^2.0.19"
 
 [tool.poetry.dev-dependencies]
 pre-commit = "^2.13.0"
