--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ authors = ["Yeojin <bluemeta@gmail.com>"]
 python = "^3.9"
 Django = "^3.2.5"
 uWSGI = "^2.0.19"
+mysqlclient = "^2.0.3"
 
 [tool.poetry.dev-dependencies]
 pre-commit = "^2.13.0"
